# microdeck

./: Cargo.toml  LICENSE  README.md  shell.nix
example/: config.json
microdeck-core/: Cargo.toml
microdeck-core/fonts/: README.md  SpaceGrotesk-LICENSE
microdeck-core/src/: config.rs  device.rs  main.rs  modules.rs
microdeck-core/src/modules/: blank.rs  counter.rs
src/: config.rs  device.rs  helper.rs  image_rendering.rs  main.rs  modules.rs  type_definition.rs
src/modules/: blank.rs  clock.rs  counter.rs  image.rs  network_usage.rs  pomodoro.rs  space.rs  system_command.rs  system_metrics.rs
